Fixed small devices forms media query. Fixed toggle-collapse menu staying on redirect problem.

--- a/AppRoot/CSS/forms.css
+++ b/AppRoot/CSS/forms.css
@@ -74,9 +74,9 @@ body {
   background-color: #155149;
 }
 
-@media screen and (max-width: 1200px) and (min-width: 768px){
+@media screen and (max-width: 1200px) {
   .emo {
-    width: 80%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     transition: 0.3s;
